--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
 <h1>Every journey starts with a single step.</h1>
 <h2>So here is mine..</h2>
-<h3>A change!!!</h3>
-<h4>Self try</h4>
+<h3>A change?!!</h3>
